Archive2/9e/3bad82e5ddb3b0/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
In file included from /usr/include/c++/4.8/ios:44:0,
                 from /usr/include/c++/4.8/istream:38,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/basic_ios.h: In constructor 'B::B()':
/usr/include/c++/4.8/bits/basic_ios.h:454:7: error: 'std::basic_ios<_CharT, _Traits>::basic_ios() [with _CharT = char; _Traits = std::char_traits<char>]' is protected
       basic_ios()
       ^
main.cpp:57:13: error: within this context
     B() : A() { }
             ^
